# FlutterRustImageFX

./: README.md
image_processor_wasm/image-processor/: Cargo.toml  LICENSE_MIT
image_processor_wasm/image-processor/src/: lib.rs
photo_editor_app/: pubspec.yaml
photo_editor_app/lib/: main.dart
photo_editor_app/lib/config/: graphql_config.dart
photo_editor_app/lib/screens/: gallery_screen.dart
photo_editor_app/lib/services/: graphql_api.dart  rust_bridge.dart  wasm_bridge.dart
