[package]
name = "image_processor"
version = "0.1.0"
authors = ["Gabriel Rovesti <rovestigabriel@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
base64 = "0.13.0"

# Per il debug
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true